clustering intro started

--- a/report_data_semantics/capitolo2.tex
+++ b/report_data_semantics/capitolo2.tex
@@ -1,6 +1,13 @@
-% TODO
 \chapter{Clustering}
 \label{ch:capitolo2}
+
+This chapter of the report aims at illustrating the clustering analysis performed on the dataset at hand.
+The employed clustering techniques are K-means (Centroid-based), DBSCAN (density-based) and hierarchical clustering.
+The analysis conducted using these methods focused on the numeric attributes of the dataset \textbf{CAPIRE SE FARE ANALISI SOLO SU NUMERICHE O INCLUDERE ANCHE BINARIE CON MIXED DISTANCES
+MATRIX}, appropriately log-transformed (as illustrated in the \textit{Variable Transformation} section) and normalized with \textbf{STANDARDSCALER o MINMAX???}.
+To provide a proper visualization of the results, a Principal Component Analysis has been conducted on the preprocessed data. 
+In particular, the optimal number of components that has been found is \textbf{se usiamo solo numeriche dovrebbe essere 4/5} (as in \textbf{AGGIUNGERE FIGURA}).
+
 
 \section{Centroid-based methods}\label{sec:centroid_based}
 
