--- a/code/hierarchical_clustering.ipynb
+++ b/code/hierarchical_clustering.ipynb
@@ -5079,19 +5079,12 @@
     "pca = PCA(random_state=42)\n",
     "data_pca = pca.fit_transform(data_scaled)\n",
     "\n",
-    "colors = ['tab:blue', 'tab:orange', 'tab:green', 'tab:red', 'tab:purple', 'tab:brown', 'tab:pink', 'tab:gray', 'tab:olive', 'tab:cyan']\n",
-    "# colors = [\n",
-    "#     '#1f77b4',  # tab:blue -> #abc -> #aabbcc\n",
-    "#     '#ff7f0e',  # tab:orange -> #fb1 -> #ffbb11\n",
-    "#     '#2ca02c',  # tab:green -> #28a -> #22aa22\n",
-    "#     '#d63928',  # tab:red -> #f83 -> #ff8833\n",
-    "#     '#9467bd',  # tab:purple -> #936 -> #993366\n",
-    "#     '#8c564b',  # tab:brown -> #975 -> #997755\n",
-    "#     '#e377c2',  # tab:pink -> #e37 -> #ee77cc\n",
-    "#     '#7f7f7f',  # tab:gray -> #777 -> #777777\n",
-    "#     '#bdbd22',  # tab:olive -> #bb2 -> #bbbb22\n",
-    "#     '#17becf'   # tab:cyan -> #17c -> #11cccc\n",
-    "# ]\n",
+    "colors = [\n",
+    "    'tab:blue', 'tab:orange', 'tab:green',\n",
+    "    'tab:red', 'tab:purple', 'tab:brown',\n",
+    "    'tab:pink', 'tab:gray', 'tab:olive',\n",
+    "    'tab:cyan'\n",
+    "]\n",
     "\n",
     "color_mapping = {i: colors[i] for i in range(len(colors))}\n",
     "\n",
@@ -5166,7 +5159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -5205,6 +5198,7 @@
     "plt.title(\"Dendrogram (Matching Agglomerative Clustering)\")\n",
     "plt.xlabel(\"Data Points\")\n",
     "plt.ylabel(\"Distance\")\n",
+    "# plt.subplots_adjust(bottom=0.2)\n",
     "\n",
     "plt.show()"
    ]
