--- a/report_data_semantics/capitolo2.tex
+++ b/report_data_semantics/capitolo2.tex
@@ -9,12 +9,11 @@ For the K-means algorithm, \texttt{awardWins}, \texttt{awardNominationsExcludeWi
 
 In addition, an attempt was made to incorporate categorical variables to the analysis with the K-means algorithm by converting them into binary attributes and constructing a mixed-distances matrix. 
 Distances were then calculated using the Euclidean distance for numerical (log-tranformed and scaled) features and the Jaccard similarity for binary ones. 
-However, this approach did not lead to any improvement in the results.
+However, this approach was computationally expensive and did not lead to any improvement in the results.
 
-Principal Component Analysis (PCA) was applied to the preprocessed data to effectively visualize the clustering results. 
+Principal Component Analysis (PCA) was applied to the preprocessed data just for clusters visualization purposes. 
 Analysis of the numerical attributes reveals that 4 principal components are optimal when excluding variables with many zero values, while 5 components are needed when including all variables. 
 These numbers of components capture the maximum meaningful variance, as shown by the point in the plots where where the line starts to flatten, indicating that adding more components doesn't increase explained variance significantly. 
-The differences between these two approaches are illustrated in Figure X.
 The plots in figure~\ref{fig:pca_diff} show the differences between these two approaches.
 \begin{figure}[h]
     \centering
@@ -33,6 +32,7 @@ The plots in figure~\ref{fig:pca_diff} show the differences between these two ap
     \caption{Principal Component Analysis}
     \label{fig:pca_diff}
 \end{figure}
+\textbf{SE EFFETTIVAMENTE CAMBIAMO NAN ENDYEAR CON IL RISPETTIVO STARTYEAR GIUSTIFICARE IL PERCHE' NON L'ABBIAMO POI INCLUSA COME VAR NELLA CLUSTERING ANALYSIS}
 
 \section{K-means}\label{sec:centroid_based}
 %The clustering analysis performed with the K-means algorithm focused on the numeric variables of the dataset, excluding \texttt{awardWins}, \texttt{awardNominationsExcludeWins}, and \texttt{totalCredits} due to their high proportion of zero values, which negatively affected cluster formation. 
@@ -118,7 +118,7 @@ To conclude, by adjusting \textit{eps} and \textit{Minpts} appropriately, the cl
 
 
 
-\section{Analysis by hierarchical clustering}\label{sec:hierarchical}
+\section{Hierarchical clustering}\label{sec:hierarchical}
 
 
 \section{General considerations}\label{sec:considerations}
